New_test_clear_output

--- a/titanic_prediction.ipynb
+++ b/titanic_prediction.ipynb
@@ -720,7 +720,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = \"adding one line to see if clearoutput is working\""
+    "test = \"New Test\""
    ]
   }
  ],
