Final_clear_output_test

--- a/titanic_prediction.ipynb
+++ b/titanic_prediction.ipynb
@@ -720,7 +720,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = \"New Test\""
+    "test = \"Final Test of clear_output\""
    ]
   }
  ],
