finish decision tree and output to kaggle

--- a/titanic_prediction.ipynb
+++ b/titanic_prediction.ipynb
@@ -715,12 +715,461 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**FIRST MODEL - DECISION TREE**\n",
+    "\n",
+    "HYPERPARAMETERS\n",
+    "\n",
+    "tree = DecisionTreeClassifier(\n",
+    "\n",
+    "criterion='gini', # gini vem por default, mas podemos optar por entropy\n",
+    "\n",
+    "splitter='best', # a estratégia utilizada para fazer a separação de cada nó # ela também pode ser feita de forma randômica utilizando 'random'\n",
+    "\n",
+    "max_depth= None, # a máxima profundida que sua árvore de decisão pode ter # se for None ela vai buscar a máxima pureza possível\n",
+    "\n",
+    "min_samples_split = 2, # o mínimo de registros necessários para que uma separação seja feita\n",
+    "\n",
+    "min_samples_leaf = 1, # o mínimo de registros necessários em cada nós-folha (veja a primeira imagem)\n",
+    "\n",
+    "max_features = None, # o número de atributos que será considerado durante o split # None -> seleciona todos os atributos, 'sqrt' -> raiz quadrada do número dos atributos, 'log2' -> log de base 2 do número de atributos\n",
+    "\n",
+    "max_leaf_nodes=None, # a quantidade máxima de nós-folha que a árvore pode ter # se for None ele não limitará o número de nós-folha\n",
+    "\n",
+    "min_impurity_decrease=0.0, # o split irá ocorrer em cada nó se o decréscimo da impureza foi maior ou igual a este valor\n",
+    "\n",
+    "random_state= 17, # permite gerar a mesma amostra (o notebook ser reproduzível)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = \"Final Test of clear_output\""
+    "Image('Decision_Tree.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Let's use the DecisionTreeClassifier class\n",
+    "\n",
+    "'''\n",
+    "class DecisionTreeClassifier(\n",
+    "    *,\n",
+    "    criterion: Literal['gini', 'entropy', 'log_loss'] = \"gini\",\n",
+    "    splitter: Literal['best', 'random'] = \"best\",\n",
+    "    max_depth: Int | None = None,\n",
+    "    min_samples_split: float | int = 2,\n",
+    "    min_samples_leaf: float | int = 1,\n",
+    "    min_weight_fraction_leaf: Float = 0,\n",
+    "    max_features: float | int | Literal['auto', 'sqrt', 'log2'] | None = None,\n",
+    "    random_state: Int | RandomState | None = None,\n",
+    "    max_leaf_nodes: Int | None = None,\n",
+    "    min_impurity_decrease: Float = 0,\n",
+    "    class_weight: Mapping | str | Sequence[Mapping] | None = None,\n",
+    "    ccp_alpha: float = 0\n",
+    ")\n",
+    "'''\n",
+    "\n",
+    "Classif_tree = DecisionTreeClassifier(random_state=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#training the decision tree with our X_train matrix and y_train results\n",
+    "\n",
+    "classif = Classif_tree.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Lets check the most important features\n",
+    "\n",
+    "classif.feature_importances_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Damn! Which is which here? Lets find out.\n",
+    "X_train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(X_train.columns)\n",
+    "\n",
+    "df2 = pd.DataFrame(classif.feature_importances_)\n",
+    "\n",
+    "df3 = pd.concat(\n",
+    "    [df, df2],\n",
+    "    axis =1\n",
+    ")\n",
+    "\n",
+    "tree_importance = df3.set_axis(['Feature', 'Importance'], axis = 'columns').sort_values(by=['Importance'], ascending=False)\n",
+    "\n",
+    "tree_importance.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#predicting our y with the X_train and the classif model\n",
+    "\n",
+    "y_pred_all = classif.predict(X_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**CONFUSION MATRIX**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.crosstab(y_train, y_pred_all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Or, from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "# Matriz de Confusão\n",
+    "\n",
+    "confusion_matrix = confusion_matrix(y_train, y_pred_all)\n",
+    "confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(classification_report(y_train, y_pred_all,digits=2))\n",
+    "\n",
+    "# Resultado do classification_report:\n",
+    "# Precision score = VP/(VP+FP)\n",
+    "# Recall score = VP/(VP+FN)\n",
+    "# F1 Score = 2* Precision Score * Recall Score/ (Precision Score + Recall Score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**EVALUATING THE RESULTS**\n",
+    "\n",
+    "Seems good right? Very high precision, recall and F1 score....\n",
+    "\n",
+    "Well, actually not. In the decision tree if we \"let it go\" as further as it wants, it will basically explain every individual case by its own parameters\n",
+    "\n",
+    "Usually if we get a precision higher than 0.8, we should suspect something is too good to be true\n",
+    "\n",
+    "Let's plot the current tree so we can see what we are talking about\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# criando o fig e o axes  - selecionando alguns niveis\n",
+    "fig, ax = plt.subplots(figsize=(16,12),dpi=130)\n",
+    "#criando o plot\n",
+    "plot_tree(classif, # a decision tree que será plotada\n",
+    "          feature_names =(['Pclass', 'Age', 'SibSp', 'Parch', 'Fare', 'male', 'Embarked_C','Embarked_Q', 'Embarked_S',\n",
+    "                           'Pclass_1', 'Pclass_2', 'Pclass_3']), # trará o nome das features utilizadas na primeira linha de cada nó\n",
+    "          ax=ax, # plotamos no axes criado do matplotlib\n",
+    "          precision=1, # precisão dos valores numéricos\n",
+    "          filled=True,\n",
+    "          max_depth=4, #  escolhemos a profundidade da árvore\n",
+    "          proportion = True, # retorna a proporção dos valores das amostras\n",
+    "          fontsize = 12 # mudar o tamanho da fonte\n",
+    "        )\n",
+    "#plotando o gráfico\n",
+    "plt.tight_layout();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#And down it goes... we should get the most important features and limit how much we want our decision tree to go down...\n",
+    "\n",
+    "#Let's go back and do the DecisionTreeClassifier again... but now using the available parameters\n",
+    "\n",
+    "'''\n",
+    "class DecisionTreeClassifier(\n",
+    "    *,\n",
+    "    criterion: Literal['gini', 'entropy', 'log_loss'] = \"gini\",\n",
+    "    splitter: Literal['best', 'random'] = \"best\",\n",
+    "    max_depth: Int | None = None,\n",
+    "    min_samples_split: float | int = 2,\n",
+    "    min_samples_leaf: float | int = 1,\n",
+    "    min_weight_fraction_leaf: Float = 0,\n",
+    "    max_features: float | int | Literal['auto', 'sqrt', 'log2'] | None = None,\n",
+    "    random_state: Int | RandomState | None = None,\n",
+    "    max_leaf_nodes: Int | None = None,\n",
+    "    min_impurity_decrease: Float = 0,\n",
+    "    class_weight: Mapping | str | Sequence[Mapping] | None = None,\n",
+    "    ccp_alpha: float = 0\n",
+    ")\n",
+    "'''\n",
+    "\n",
+    "Classif_tree_optimized = DecisionTreeClassifier(\n",
+    "    random_state=10,\n",
+    "    max_depth = 4\n",
+    ")\n",
+    "\n",
+    "classif2 = Classif_tree_optimized.fit(X_train, y_train)\n",
+    "\n",
+    "df = pd.DataFrame(X_train.columns)\n",
+    "\n",
+    "df2 = pd.DataFrame(classif2.feature_importances_)\n",
+    "\n",
+    "df3 = pd.concat(\n",
+    "    [df, df2],\n",
+    "    axis =1\n",
+    ")\n",
+    "\n",
+    "tree_importance = df3.set_axis(['Feature', 'Importance'], axis = 'columns').sort_values(by=['Importance'], ascending=False)\n",
+    "\n",
+    "tree_importance.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**TESTING THE DECISION TREE IN OUR TEST.CSV**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#let's train our new model\n",
+    "y_pred2 = classif2.predict(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "confusion_matrix = confusion_matrix(y_train, y_pred2)\n",
+    "confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(classification_report(y_train, y_pred2,digits=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Let's test this model in our test.csv file\n",
+    "\n",
+    "test_decision_tree = pd.read_csv('test.csv')\n",
+    "\n",
+    "test_decision_tree.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Filling up the NaN Ages\n",
+    "trainMeans2 = test_decision_tree.groupby(['Sex','Pclass'])['Age'].mean()\n",
+    "\n",
+    "def age_estimate(x):\n",
+    "    if not np.isnan(x['Age']):                  ## if age is not NaN\n",
+    "        return x['Age']                         ## return itself (the age)\n",
+    "    return trainMeans2[x[\"Sex\"], x['Pclass']]    ## otherwise retuns the age calculated in the trainMeans formula\n",
+    "\n",
+    "\n",
+    "test_decision_tree['Age'] = test_decision_tree.apply(age_estimate, axis=1)\n",
+    "test_decision_tree.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#filling the NaN Fare\n",
+    "trainfareAverage = test_decision_tree.groupby(['Sex','Pclass'])['Fare'].mean()\n",
+    "\n",
+    "def fare_estimate(x):\n",
+    "    if not np.isnan(x['Fare']):                  ## if age is not NaN\n",
+    "        return x['Fare']                         ## return itself (the age)\n",
+    "    return trainfareAverage[x[\"Sex\"], x['Pclass']]    ## otherwise retuns the age calculated in the trainMeans formula\n",
+    "\n",
+    "\n",
+    "test_decision_tree['Fare'] = test_decision_tree.apply(fare_estimate, axis=1)\n",
+    "test_decision_tree.info()\n",
+    "\n",
+    "#fare = Average\n",
+    "#test_decision_tree['Fare'].fillna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Getting our dummies\n",
+    "\n",
+    "## Sex Dummies\n",
+    "test_decision_tree['male'] = pd.get_dummies(\n",
+    "    test_decision_tree['Sex'],\n",
+    "    drop_first=True\n",
+    ")\n",
+    "## EMBARK DUMMIES\n",
+    "embark_dummies2 = pd.get_dummies(\n",
+    "    test_decision_tree['Embarked'],                 #This time we will do the same for the embarked column\n",
+    "    drop_first=True,                                #dropping the first column (should be C)\n",
+    "    prefix='Embarked_'                              #putting a prefix so we end up with Embarked_Q and Embarked_S columns\n",
+    ")\n",
+    "\n",
+    "test_decision_tree = pd.concat(\n",
+    "    [ test_decision_tree , embark_dummies2 ],    #the two dataframes we want to unite\n",
+    "    axis=1                                       #the axis=1 indicate we will concatenate the dataframes horizontally (add columns)\n",
+    ")\n",
+    "\n",
+    "##P_Class Dummies\n",
+    "pclass_dummies2 = pd.get_dummies(\n",
+    "    test_decision_tree['Pclass'],              #Create a dummy that returns the columns \n",
+    "    drop_first=True,                #Droppint the Pclass_1 column that will not be necessary\n",
+    "    prefix=\"Pclass_\"                #Pclass_2 and #Pclass_3\n",
+    ")\n",
+    "\n",
+    "test_decision_tree = pd.concat(\n",
+    "    [ test_decision_tree , pclass_dummies2 ],   #the two dataframes we want to unite\n",
+    "    axis=1                          #the axis=1 indicate we will concatenate the dataframes horizontally (add columns)\n",
+    ")\n",
+    "\n",
+    "test_decision_tree.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df = test_decision_tree[['Age','SibSp','Parch','Fare','male','Embarked__Q','Embarked__S', 'Pclass__2','Pclass__3']]\n",
+    "test_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_decision_tree['Survived'] = classif2.predict(test_decision_tree[['Age','SibSp','Parch','Fare','male','Embarked__Q','Embarked__S', 'Pclass__2','Pclass__3']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_decision_tree.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_decision_tree['Survived'] = test_decision_tree['Survived'].astype(int)\n",
+    "\n",
+    "kaggle_response = test_decision_tree[['PassengerId','Survived']].sort_values(by = 'PassengerId')\n",
+    "\n",
+    "kaggle_response.head(418)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kaggle_response.to_csv('decision_tree_response.csv')"
    ]
   }
  ],
