exclude index from response csv

--- a/titanic_prediction_decision_tree.ipynb
+++ b/titanic_prediction_decision_tree.ipynb
@@ -1169,7 +1169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kaggle_response.to_csv('decision_tree_response.csv')"
+    "kaggle_response.to_csv('decision_tree_response.csv', index=False)"
    ]
   }
  ],
