Add logistic regression result

--- a/titanic_prediction_decision_tree.ipynb
+++ b/titanic_prediction_decision_tree.ipynb
@@ -1171,6 +1171,364 @@
    "source": [
     "kaggle_response.to_csv('decision_tree_response.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SECOND MODEL - LOGISTIC REGRESSION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titanic2 = titanic\n",
+    "titanic2.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titanic2.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We will try to use the Logistic regression with the 3 most important variables, but first we turn the target to numeric\n",
+    "titanic2['Survived']= titanic2['Survived'].astype(int)\n",
+    "titanic2['Pclass__3']= titanic2['Pclass__3'].astype(int)\n",
+    "titanic2['Pclass__2']= titanic2['Pclass__2'].astype(int)\n",
+    "titanic2['male']= titanic2['male'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titanic2.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#smf is the stat model \n",
+    "modelo = smf.glm(formula='Survived ~ male + Pclass__3 + Age + Pclass__2', data=titanic2,\n",
+    "               family = sm.families.Binomial()).fit()\n",
+    "print(modelo.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# good results for the p-values. Which are all bellow 0.05 for 95% confidence\n",
+    "#this results shows that,from the baselines of our dummies, that all the selected variables  have negative coeficients\n",
+    "#remember that in our case, the target variable is 1 (survived) or 0 (did not survive)\n",
+    "# that means that being male, being on any class other than first, and being older decreased the chance of surviving\n",
+    "# the fact that both Pclass__3 and Pclass__2 have positive coefficients, shows that it being\n",
+    "\n",
+    "print(np.exp(modelo.params[1:]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(np.exp(modelo.params[1:]) - 1) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now that's easier to understand\n",
+    "# we interpret that as:\n",
+    "# men have 92% less chance to survive than women\n",
+    "# people from third class had 92% less change\n",
+    "# each year a passenger were, less 3.7% chance of surviving"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LOGISTIC REGRESSION PARAMETERS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_reg_model = LogisticRegression(penalty=None, solver = 'newton-cg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#let's separate only the main factors\n",
+    "baseline_df = titanic2[['Survived','Pclass__3', 'Pclass__2', 'Age', 'male']]\n",
+    "baseline_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = baseline_df['Survived']\n",
+    "X = baseline_df[['Pclass__3', 'Pclass__2', 'Age', 'male']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_reg_model.fit(X,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(log_reg_model.coef_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Same values found before\n",
+    "accuracy = accuracy_score(y, log_reg_model.predict(X))\n",
+    "print('The model got %0.4f of accuracy.' % accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(classification_report(y, log_reg_model.predict(X)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predizendo as probabilidades\n",
+    "yhat = log_reg_model.predict_proba(X) \n",
+    "print('AUC: %0.2f' % roc_auc_score(y, yhat[:, 1]))   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_roc_curve(y_true, y_score, figsize=(10,6)):\n",
+    "    fpr, tpr, _ = roc_curve(y_true, y_score)\n",
+    "    plt.figure(figsize=figsize)\n",
+    "    auc_value = roc_auc_score(y_true, y_score)\n",
+    "    plt.plot(fpr, tpr, color='orange', label='ROC curve (area = %0.2f)' % auc_value)\n",
+    "    plt.plot([0, 1], [0, 1], color='darkblue', linestyle='--')\n",
+    "    plt.xlabel('False Positive Rate')\n",
+    "    plt.ylabel('True Positive Rate')\n",
+    "    plt.title('Receiver Operating Characteristic (ROC) Curve')\n",
+    "    plt.legend()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_roc_curve(y, yhat[:, 1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predicting the test.csv file\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Let's test this model in our test.csv file------------------------------------------------\n",
+    "\n",
+    "test_decision_tree = pd.read_csv('test.csv')\n",
+    "\n",
+    "#Filling up the NaN Ages------------------------------------------------------------------\n",
+    "trainMeans2 = test_decision_tree.groupby(['Sex','Pclass'])['Age'].mean()\n",
+    "\n",
+    "def age_estimate(x):\n",
+    "    if not np.isnan(x['Age']):                  ## if age is not NaN\n",
+    "        return x['Age']                         ## return itself (the age)\n",
+    "    return trainMeans2[x[\"Sex\"], x['Pclass']]    ## otherwise retuns the age calculated in the trainMeans formula\n",
+    "\n",
+    "\n",
+    "test_decision_tree['Age'] = test_decision_tree.apply(age_estimate, axis=1)\n",
+    "\n",
+    "\n",
+    "#filling the NaN Fare-------------------------------------------------------------------------\n",
+    "trainfareAverage = test_decision_tree.groupby(['Sex','Pclass'])['Fare'].mean()\n",
+    "\n",
+    "def fare_estimate(x):\n",
+    "    if not np.isnan(x['Fare']):                  ## if age is not NaN\n",
+    "        return x['Fare']                         ## return itself (the age)\n",
+    "    return trainfareAverage[x[\"Sex\"], x['Pclass']]    ## otherwise retuns the age calculated in the trainMeans formula\n",
+    "\n",
+    "\n",
+    "test_decision_tree['Fare'] = test_decision_tree.apply(fare_estimate, axis=1)\n",
+    "\n",
+    "#fare = Average\n",
+    "#test_decision_tree['Fare'].fillna()\n",
+    "\n",
+    "#Getting our dummies-----------------------------------------------------------------------------\n",
+    "\n",
+    "## Sex Dummies\n",
+    "test_decision_tree['male'] = pd.get_dummies(\n",
+    "    test_decision_tree['Sex'],\n",
+    "    drop_first=True\n",
+    ")\n",
+    "## EMBARK DUMMIES\n",
+    "embark_dummies2 = pd.get_dummies(\n",
+    "    test_decision_tree['Embarked'],                 #This time we will do the same for the embarked column\n",
+    "    drop_first=True,                                #dropping the first column (should be C)\n",
+    "    prefix='Embarked_'                              #putting a prefix so we end up with Embarked_Q and Embarked_S columns\n",
+    ")\n",
+    "\n",
+    "test_decision_tree = pd.concat(\n",
+    "    [ test_decision_tree , embark_dummies2 ],    #the two dataframes we want to unite\n",
+    "    axis=1                                       #the axis=1 indicate we will concatenate the dataframes horizontally (add columns)\n",
+    ")\n",
+    "\n",
+    "##P_Class Dummies\n",
+    "pclass_dummies2 = pd.get_dummies(\n",
+    "    test_decision_tree['Pclass'],              #Create a dummy that returns the columns \n",
+    "    drop_first=True,                #Droppint the Pclass_1 column that will not be necessary\n",
+    "    prefix=\"Pclass_\"                #Pclass_2 and #Pclass_3\n",
+    ")\n",
+    "\n",
+    "test_decision_tree = pd.concat(\n",
+    "    [ test_decision_tree , pclass_dummies2 ],   #the two dataframes we want to unite\n",
+    "    axis=1                          #the axis=1 indicate we will concatenate the dataframes horizontally (add columns)\n",
+    ")\n",
+    "\n",
+    "test_decision_tree.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_log_reg = test_decision_tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Remember what columsn our baseline used:\n",
+    "\n",
+    "## X = baseline_df[['Pclass__3', 'Pclass__2', 'Age', 'male']]\n",
+    "\n",
+    "test_log_reg_X = test_log_reg[['Pclass__3', 'Pclass__2', 'Age', 'male']] ## let's use this df that is already transformed for us\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_reg_model.predict(test_log_reg_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_log_reg['Survived'] = log_reg_model.predict(test_log_reg_X).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_log_reg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kaggle_response2 = test_log_reg[['PassengerId','Survived']].sort_values(by = 'PassengerId')\n",
+    "kaggle_response2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kaggle_response2.to_csv('Logistic_regression_response.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
